fix gift-item img overlapping navigation bar items

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -109,6 +109,8 @@ nav {
   height: 3vh;
   width: 100%;
   margin-bottom: 20vh;
+  position: relative;
+  z-index: 100;
 }
 
 label.logo {
